tests/init/neg/default-this.check
-- Error: tests/init/neg/default-this.scala:9:8 ------------------------------------------------------------------------
9 |        compare() // error
  |        ^^^^^^^
  |    Cannot prove the argument is fully initialized. Only fully initialized values are safe to leak. Calling trace:
  |    -> class B extends A {	[ default-this.scala:6 ]
  |       ^
  |    -> val result = updateThenCompare(5)	[ default-this.scala:11 ]
  |                    ^^^^^^^^^^^^^^^^^^^^
  |    -> def updateThenCompare(c: Int): Boolean = {	[ default-this.scala:7 ]
  |       ^
  |    -> compare() // error	[ default-this.scala:9 ]
  |       ^^^^^^^
